--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="card-body"> 
 						<img src="images/photo.jpg" class="w-60 rounded-circle">
 						<h4 class="card-title">Serena Maddalena</h4>
-						<p class="card-text">Marketing Student</p>
+						<p class="card-text"> International Marketing Student</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.linkedin.com/in/serena-maddalena/"><i class="fab fa-linkedin fa-2x text-dark mx-1"></i></a>
