--- a/project.html
+++ b/project.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Serena Maddalena Projects</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css.style">
 
@@ -36,6 +42,11 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<h1>Projects</h1>
+					<div class="card mt-3 text-center">
+						<div class="container mt-3 my-3">
+							<img src="images/london.jpg" style="width:500px;height:600px;" >
+						</div>	
+					</div>
 				</div>
 			</div>
 		</div>
