--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
@@ -44,7 +46,7 @@
 					<div class="card-body"> 
 						<img src="images/photo.jpg" class="w-60 rounded-circle">
 						<h4 class="card-title animated bounceIn">Serena Maddalena</h4>
-						<p class="card-text"> International Marketing Student</p>
+						<p class="card-text"> International Marketing MSc Student</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.linkedin.com/in/serena-maddalena/"><i class="fab fa-linkedin fa-2x text-dark mx-1"></i></a>
@@ -55,9 +57,9 @@
 				<div class="card my-3">
 					<div class="card-body">
 						<h4 class="card-title">Information</h4>
-						<p class="card-text"><i class="fas fa-map-pin"></i> Strand London</p>
-						<p class="card-text"><i class="fas fa-graduation-cap"></i> KCL</p>
-						<p class="card-text"><i class="fas fa-briefcase"></i> International Marketing</p>
+						<p class="card-text"><i class="fas fa-map-pin"></i> London, UK</p>
+						<p class="card-text"><i class="fas fa-graduation-cap"></i> King's College London</p>
+						<a href="./images/serenamaddalena.pdf" download="newfilename">Download My CV</a>
 					</div>				
 				</div>
 				<div class="card mt-3"> 
@@ -75,9 +77,10 @@
 						<div class="progress">
   						<div class="progress-bar progress-bar-striped bg-successo" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
   						</div>
+  					</div>
+  					German
 						<div class="progress">
-  						<div class="progress-bar progress-bar-striped bg-successo" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
+  						<div class="progress-bar progress-bar-striped bg-successo" role="progressbar" style="width: 60%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					</div>
 				</div>
@@ -107,12 +110,8 @@
 					<div class="card-body">
 						<h4>About me</h4>
 						<p class="card-text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Welcome to my portfolio. Yes, I coded this website myself and even though it does not look fancy, I am quite proud of this achievement. 
+							I have a background in Humanities with absolutely no particular IT skills, and yet here you are. 
 						</p>
 					</div>
 				</div>
