yep another one

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h4 class="card-title">Information</h4>
 						<p class="card-text"><i class="fas fa-map-pin"></i> London, UK</p>
 						<p class="card-text"><i class="fas fa-graduation-cap"></i> King's College London</p>
-						<a href="./images/serenamaddalena.pdf" download="newfilename">Download My CV</a>
+						<a href="./images/serenamaddalena.pdf" download="CV_SerenaMaddalena">Download My CV</a>
 					</div>				
 				</div>
 				<div class="card mt-3"> 
