--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 					<div class="card-body">
 						<h4 class="card-title">Information</h4>
 						<p class="card-text"><i class="fas fa-map-pin"></i> London, UK</p>
-						<p class="card-text"><i class="fas fa-graduation-cap"></i> King's College London</p>
-						<a href="./images/serenamaddalena.pdf" download="CV_SerenaMaddalena">Download My CV</a>
+						<p class="card-text"><i class="fas fa-graduation-cap"></i> King's College London - MSc International Marketing</p>
+						<a href="./images/CV_Serena_maddalena.pdf" download="CV_Serena_Maddalena">Download My CV</a>
 					</div>				
 				</div>
 				<div class="card mt-3"> 
