--- a/browny-v1.0/index.html
+++ b/browny-v1.0/index.html
@@ -122,10 +122,10 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a postgraduate International Marketing Student at one of the top UK Universities, with a strong interest for all things digital and photography.
+									1 of 9 million
 								</h3>
 								<p>
-									With previous working experience in a fintech start-up in the vibrant Old Street and several extra-curricular activities undertaken to improve my digital skills, including an HTML and CSS course thanks to which you are now able to read my first portfolio, I am now looking for an internship or graduate opportunity to finally put in practice what I've been learning for the past months. 
+									Proud member of the <b>expats in London</b> substrate of human beings populating this 9-million city. Born and raised in Italy, I always felt like I had to go and find my own place and this appears to be somewhere in the East End of London. Hidden among canals, hipster cafés and cheerful doggos, here I am trying to tell my story.
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
